<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:background="#ffffff"
    android:orientation="vertical"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear_from_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:orientation="horizontal"
        android:padding="@dimen/_14sdp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/text_from_camera"
            android:textColor="@color/color_6A4242"
            android:textSize="@dimen/_14sdp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_c9b3b7" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear_from_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:orientation="horizontal"
        android:padding="@dimen/_14sdp">


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/text_from_gallery"
            android:textColor="@color/color_6A4242"
            android:textSize="@dimen/_14sdp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_c9b3b7" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:orientation="horizontal"
        android:padding="@dimen/_14sdp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/text_button_cancel"
            android:textColor="@color/color_6A4242"
            android:textSize="@dimen/_14sdp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</LinearLayout>